[package]
name = "rust-systems-tracker"
version = "0.1.0"
edition = "2021"
description = "Tracks system diagnostics and build status across services"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
